# String-Pool

./: CMakeLists.txt  LICENSE  README.md
include/: Block.h  Pool.h  PoolString.h
src/: StringPoolTest.cpp
